tests/tooling/fixtures/native/recovery/negative/negative_switch_case_do_while_true_break_conservative_reject.objc3
// Negative fixture: non-static do-while/control-flow escape paths remain conservative in switch case-body return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchCaseDoWhileTrueBreakConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      do {
        break;
      } while (true);
    case 2:
      return 42;
    default:
      return 9;
  }
}
